@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Make shares table compatible with Oracle.
 * [mjr] Add API support for multiple tasklists via ActiveSync.
  </notes>
  <contents>
@@ -1441,6 +1442,7 @@
    <date>2013-10-29</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Make shares table compatible with Oracle.
 * [mjr] Add API support for multiple tasklists via ActiveSync.
    </notes>
   </release>
