@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Make shares table compatible with Oracle.
 [mjr] Add API support for multiple tasklists via ActiveSync.
 
 
